Small fix for NPE.